# mmvaeplus

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
commands/: run_polyMNIST_experiment.sh  run_robot_actions_experiment.sh
mmvaeplus/: dataset_CUB.py  dataset_robot_actions.py  datasets_PolyMNIST.py  objectives.py  train_MMVAEplus_polyMNIST.py  train_MMVAEplus_robot_actions.py  utils.py
mmvaeplus/models/: __init__.py  base_vae.py  mmvaeplus.py  mmvaeplus_CUB.py  mmvaeplus_polyMNIST.py  mmvaeplus_robot_actions.py  vae_CUB_captions_modality.py  vae_CUB_image_modality.py  vae_polyMNIST_single_modality.py  vae_robot_actions.py
mmvaeplus/models/encoder_decoder_blocks/: cnn_cub_text.py  mlp_robot_actions.py  resnet_cub_image.py  resnet_polyMNIST.py
src/: dataset_CUBICC.py  dataset_robot_actions.py  objectives.py  test_functions_CUB.py  test_functions_polyMNIST.py  train_MMVAEplus_CUB.py  train_MMVAEplus_CUBICC.py  train_MMVAEplus_polyMNIST.py  train_MMVAEplus_robot_actions.py  utils.py
src/commands/: run_CUB_experiment.sh  run_robot_actions_experiment.sh
src/models/: __init__.py  base_vae.py  mmvaeplus.py  mmvaeplus_CUB.py  mmvaeplus_polyMNIST.py  mmvaeplus_robot_actions.py  polyMNIST_resnet_classifier.py  vae_CUBICC_captions_modality.py  vae_CUBICC_image_modality.py  vae_CUB_captions_modality.py  vae_CUB_image_modality.py  vae_polyMNIST_single_modality.py  vae_robot_actions.py
src/models/encoder_decoder_blocks/: cnn_cub_text.py  mlp_robot_actions.py  resnet_cub_image.py  resnet_polyMNIST.py
tests/: test_robot_actions.py
